[package]
name = "site-stats-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
texting_robots = "0.2"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"